[package]
name = "mm2"
version = "0.1.0"
edition = "2018"

# Waiting for https://doc.rust-lang.org/beta/cargo/reference/unstable.html#default-run to become stable.
#default-run = "mm2"

[[bin]]
name = "seed-converter"
path = "mm2src/mm2_seed_converter.rs"

[profile.dev]
# Enable light optimizations. We want a debuggable version but not a completely dumb one.
# Can override this with "set CARGO_BUILD_RUSTFLAGS=-C opt-level=0".
opt-level = 1

[profile.test]
# Should probably match "profile.dev", given that we're reusing the libraries.
opt-level = 1

[dependencies]
sha2 = "0.8"
hex = "0.3.2"
